# pypeline

./: .gitignore  CMakeLists.txt  README.rst  build.py  conda_requirements.txt  pypeline.sh  requirements.txt  setup.cfg  setup.py  test.cpp  test.py  tox.ini
cmake/: FFTW3Config.cmake  FFTW3fConfig.cmake  MKLConfig.cmake
doc/: conf.py  index.rst
doc/api/: index.rst  pypeline.phased_array.bluebild.field_synthesizer.fourier_domain.rst  pypeline.phased_array.bluebild.field_synthesizer.rst  pypeline.phased_array.bluebild.imager.fourier_domain.rst  pypeline.phased_array.bluebild.imager.rst  pypeline.phased_array.bluebild.imager.spatial_domain.rst  pypeline.phased_array.bluebild.parameter_estimator.rst  pypeline.phased_array.bluebild.rst  pypeline.phased_array.rst  pypeline.phased_array.util.data_gen.sky.rst  pypeline.phased_array.util.data_gen.visibility.rst  pypeline.phased_array.util.gram.rst  pypeline.phased_array.util.grid.rst  pypeline.phased_array.util.io.image.rst  pypeline.phased_array.util.io.rst  pypeline.phased_array.util.rst  pypeline.util.argcheck.rst  pypeline.util.array.rst  pypeline.util.math.fourier.rst  pypeline.util.math.func.rst  pypeline.util.math.linalg.rst  pypeline.util.math.rst  pypeline.util.math.special.rst  pypeline.util.math.sphere.rst  pypeline.util.math.stat.rst  pypeline.util.plot.rst
doc/general/: disable_checks.rst  index.rst  install.rst  known_issues.rst  programming_guide.rst
doc/notes/: CZT.rst  FS_eval_for_BL_signals.rst  func_interpolation_BL_signals.rst  func_interpolation_OL_zonal.rst
doc/source/: conf.py  index.rst
doc/source/api/: core.rst  index.rst  pypeline.core.rst  pypeline.phased_array.beamforming.rst  pypeline.phased_array.bluebild.data_processor.rst  pypeline.phased_array.bluebild.field_synthesizer.rst  pypeline.phased_array.bluebild.field_synthesizer.spatial_domain.rst  pypeline.phased_array.bluebild.imager.rst  pypeline.phased_array.bluebild.rst  pypeline.phased_array.gram.rst  pypeline.phased_array.instrument.rst  pypeline.phased_array.rst  pypeline.phased_array.util.data_gen.rst  pypeline.phased_array.util.data_gen.visibility.rst  pypeline.phased_array.util.grid.rst  pypeline.phased_array.util.io.image.rst  pypeline.phased_array.util.io.ms.rst  pypeline.phased_array.util.io.rst  pypeline.phased_array.util.rst  pypeline.rst  pypeline.util.argcheck.rst  pypeline.util.array.rst  pypeline.util.math.func.rst  pypeline.util.math.linalg.rst  pypeline.util.math.rst  pypeline.util.math.special.rst  pypeline.util.math.sphere.rst  pypeline.util.math.stat.rst  pypeline.util.rst
doc/source/api/util/: argcheck.rst  index.rst  plot.rst
doc/source/api/util/math/: func.rst  linalg.rst  stat.rst
doc/source/general/: disable_checks.rst  index.rst  install.rst
doc/source/notes/: CZT.rst  DFT.rst  FS_eval_for_BL_signals.rst  func_interpolation_BL_signals.rst  func_interpolation_OL_zonal.rst  index.rst  test.rst
etc/: pypeline.conf
examples/: test.py
examples/real_data/: lofar_bootes_ps.py  lofar_bootes_ss.py
examples/simulation/: lofar_bootes_ps.py  lofar_bootes_ss.py
include/cmake/: FindMKL.cmake
include/cmake/Modules/: FindEigen3.cmake  FindMKL.cmake
include/pypeline/: types.hpp
include/pypeline/phased_array/bluebild/field_synthesizer/: fourier_domain.hpp
include/pypeline/phased_array/util/io/: image.hpp
include/pypeline/util/: _argcheck.tpp  _array.tpp  _cpp_py3_interop.tpp  argcheck.hpp  array.hpp  cpp_py3_interop.hpp
include/pypeline/util/math/: _linalg.tpp  fourier.hpp  func.hpp  linalg.hpp  sphere.hpp
pypeline/: __init__.py  core.py
pypeline/data/: pypeline.cfg
pypeline/data/phased_array/instrument/: LOFAR.csv
pypeline/data/util/math/special/: iv_threshold.csv  jv_threshold.csv  spherical_jn_threshold.csv
pypeline/phased_array/: __init__.py  beamforming.py  gram.py  instrument.py
pypeline/phased_array/bluebild/: __init__.py  data_processor.py  parameter_estimator.py
pypeline/phased_array/bluebild/field_synthesizer/: __init__.py  fourier_domain.py  spatial_domain.py
pypeline/phased_array/bluebild/field_synthesizer/fourier_domain/: __init__.py  _fourier_domain.py  _fourier_domain_pybind11.cpp
pypeline/phased_array/bluebild/imager/: __init__.py  fourier_domain.py  spatial_domain.py
pypeline/phased_array/util/: __init__.py  data_gen.py  gram.py  grid.py  io.py
pypeline/phased_array/util/data_gen/: __init__.py  sky.py  visibility.py
pypeline/phased_array/util/io/: __init__.py  image.py  ms.py
pypeline/phased_array/util/io/image/: __init__.py  _image.py  _image_pybind11.cpp
pypeline/test/: test_core.py
pypeline/test/util/: test_argcheck.py
pypeline/util/: __init__.py  argcheck.py  array.py  plot.py
pypeline/util/argcheck/: __init__.py  _argcheck.cpp  _argcheck.py
pypeline/util/array/: __init__.py  _array.cpp  _array.py  _array_pybind11.cpp
pypeline/util/math/: __init__.py  fourier.py  func.py  linalg.py  special.py  sphere.py  stat.py
pypeline/util/math/fourier/: __init__.py  _fourier.py  _fourier_pybind11.cpp
pypeline/util/math/func/: __init__.py  _func.cpp  _func.py  _func_pybind11.cpp
pypeline/util/math/linalg/: __init__.py  _linalg.cpp  _linalg.py  _linalg_pybind11.cpp
pypeline/util/math/sphere/: __init__.py  _sphere.py  _sphere_pybind11.cpp
pypeline/util/pybind11/: _cpp_py3_interop.cpp
tools/: pre-commit.py
