# #############################################################################
# setup.cfg
# =========
# Author : Sepand KASHANI [sep@zurich.ibm.com]
# Revision : 0.3
# Last updated : 2018-05-10 16:03:30 UTC
# #############################################################################

[metadata]
name = pypeline
summary = signal processing toolkit to build holistic imaging pipelines
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
keywords =
    phased-array
    radio-astronomy
    acoustics

author = Paul HURLEY, Sepand KASHANI, Matthieu SIMEONI, [Imaging of Things Team (ImoT), Cognitive Signal Processing Group, IBM Research Zurich]
# author_email =
maintainer = Sepand KASHANI [ImoT]
maintainer_email = sep@zurich.ibm.com
url = https://github.ibm.com/PAH/pypeline
download_url = https://github.ibm.com/PAH/pypeline
# project_urls =
#     Bug Tracker =
#     Documentation =
#     Source Code =

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
license = GPLv3

[options]
include_package_data = True
python_requires = >=3.6
zip_safe = True

[files]
packages =
    pypeline
data_files =
#    etc/ = etc/pypeline.conf

[build_sphinx]
fresh-env = True
all-files = True
build-dir = doc/build
source-dir = doc/source
builder = html
warning-is-error = True
